--- a/app.json
+++ b/app.json
@@ -29,9 +29,14 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["@react-native-firebase/app", "@react-native-firebase/auth"],
+    "plugins": [
+      "@react-native-firebase/app",
+      "@react-native-firebase/auth"
+    ],
     "extra": {
-      "eas": {}
+      "eas": {
+        "projectId": "a0348b89-0ac1-42f2-a6d5-b3d5e55e7b65"
+      }
     }
   }
 }
