--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^23.7.0",
+    "@react-native-firebase/auth": "^23.7.0",
     "expo": "~54.0.27",
     "expo-dev-client": "~6.0.20",
     "expo-status-bar": "~3.0.9",
-    "ja-auth-sdk": "^2.0.5",
+    "ja-auth-sdk": "^2.1.2",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "^5.6.2"
